feat(analysis): Implement multilingual PDF export and fix critical bugs
- Feat: Added full multilingual support to PDF exports.
- Feat: Added support for Hindi, Tamil, Bengali, and Kannada fonts in jsPDF.
- Feat: Added scatter plot (FFT) image and data to PDF reports.
- Fix: Resolved 'Unterminated string' JSON parsing error in the Gemini API prompt.
- Fix: Corrected i18n.js to include 'How to Use' welcome message translations.
- Refactor: Cleaned up i18n.js file and removed syntax errors.

--- a/darpan-ai-engine/requirements.txt
+++ b/darpan-ai-engine/requirements.txt
@@ -17,3 +17,12 @@ requests
 nltk
 textstat
 textblob
+google-cloud-translate
+google-cloud-vision
+exifread
+google-cloud-firestore
+
+tensorflow-cpu
+numpy
+Pillow
+google-cloud-storage
